--- a/app/src/main/res/layout/fragment_crime_detail.xml
+++ b/app/src/main/res/layout/fragment_crime_detail.xml
@@ -50,6 +50,7 @@
                 android:hint="@string/crime_title_hint"
                 android:inputType="text" />
         </LinearLayout>
+
     </LinearLayout>
 
     <TextView
@@ -81,4 +82,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/crime_report_text"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <CheckedTextView
+            android:id="@+id/enableFaceDetection"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="CheckedTextView" />
+
+        <TextView
+            android:id="@+id/numFaces"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="" />
+    </LinearLayout>
 </LinearLayout>
