--- a/app/src/main/res/layout/fragment_crime_detail.xml
+++ b/app/src/main/res/layout/fragment_crime_detail.xml
@@ -88,11 +88,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <CheckedTextView
+        <CheckBox
             android:id="@+id/enableFaceDetection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/enableFaceDetectionLabel"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="CheckedTextView" />
+            android:text="Enable Face Detection" />
 
         <TextView
             android:id="@+id/numFaces"
