--- a/app/src/main/res/layout/fragment_crime_detail.xml
+++ b/app/src/main/res/layout/fragment_crime_detail.xml
@@ -84,6 +84,41 @@
         android:text="@string/crime_report_text"/>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <com.google.mlkit.vision.demo.GraphicOverlay
+            android:id="@+id/crime_photo_2"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:scaleType="centerInside"
+            android:cropToPadding="true"
+            android:background="@color/white"
+            android:contentDescription="@string/crime_photo_no_image_description" />
+
+        <com.google.mlkit.vision.demo.GraphicOverlay
+            android:id="@+id/crime_photo_3"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:scaleType="centerInside"
+            android:cropToPadding="true"
+            android:background="@color/white"
+            android:contentDescription="@string/crime_photo_no_image_description" />
+
+        <com.google.mlkit.vision.demo.GraphicOverlay
+            android:id="@+id/crime_photo_4"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:scaleType="centerInside"
+            android:cropToPadding="true"
+            android:background="@color/white"
+            android:contentDescription="@string/crime_photo_no_image_description" />
+    </LinearLayout>
+    <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -106,4 +141,6 @@
             android:layout_weight="1"
             android:text="" />
     </LinearLayout>
+
+
 </LinearLayout>
